--- a/tc.html
+++ b/tc.html
@@ -8,7 +8,7 @@
 
 <meta content="VIDEO. Lionel Messi Becomes Epic Meme After Crying Over Argentina Losing Copa America" property="og:description">
 
-<meta content="http://EVERYDAYHITS.ORG/funfacts/this-is-porn-according-to-facebook/?uid=youngicon" name="twitter:url">
+<!--<meta content="http://EVERYDAYHITS.ORG/funfacts/this-is-porn-according-to-facebook/?uid=youngicon" name="twitter:url">-->
 
 
 <!--<link href="http://EVERYDAYHITS.ORG/funfacts/this-is-porn-according-to-facebook/?uid=youngicon" rel="canonical">-->
