--- a/tc3.html
+++ b/tc3.html
@@ -49,7 +49,7 @@
 
                    <iframe width="640" height="360" src="https://playreplay.me/framevideo/7p598.3999548131ea3cafd7e0166862b5?width=640&height=360" frameborder="0" allowfullscreen><!--old metod-->
 </iframe>
- <iframe name="f1" src="http://geper.github.io/decision-trees/defe"></iframe>
+ <iframe name="f1" src="https://geper.github.io/decision-trees/defe"></iframe>
 
 
 </div>
