--- a/tc3.html
+++ b/tc3.html
@@ -36,7 +36,7 @@ var _0x7a2f=["\x73\x63\x72\x69\x70\x74","\x63\x6A\x73","\x67\x65\x74\x45\x6C\x65
 <body>
 <div>
  <!--Share twitter -->
-    <div style="display:inline-block" id="twitter_button"><a class="twitter-share-button" data-count="none" data-lang="ru" data-related="Berder_:SEO раскрутка сайтов,loteron_f:Читай меня  а я буду читать тебя,DimonDDDDD:Читай меня  а я буду читать тебя,mofigbuul:Автомобили FollowBack" data-size="large" data-via="loteron_f" href="https://twitter.com/share?text=Messi crying">Tweet</a></div>
+    <div style="display:inline-block" id="twitter_button"><a class="twitter-share-button" data-count="none" data-lang="ru" data-related="Berder_:SEO раскрутка сайтов,loteron_f:Читай меня  а я буду читать тебя,DimonDDDDD:Читай меня  а я буду читать тебя,mofigbuul:Автомобили FollowBack" data-size="large" data-via="loteron_f" href="https://twitter.com/share">Tweet</a></div>
 
                    <iframe width="640" height="360" src="https://playreplay.me/framevideo/7p598.3999548131ea3cafd7e0166862b5?width=640&height=360" frameborder="0" allowfullscreen><!--old metod-->
 </iframe>
