--- a/cryptochart.html
+++ b/cryptochart.html
@@ -40,5 +40,38 @@
   </script>
 </div>
 <!-- TradingView Widget END -->
+  <!-- TradingView Widget BEGIN -->
+<div class="tradingview-widget-container">
+  <div id="tradingview_6e229"></div>
+  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/BINANCE-BNBBTC/" rel="noopener" target="_blank"><span class="blue-text">BNBBTC</span> <span class="blue-text">chart</span> by TradingView</a></div>
+  <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
+  <script type="text/javascript">
+  new TradingView.widget(
+  {
+  "width": 980,
+  "height": 610,
+  "symbol": "BINANCE:BNBBTC",
+  "interval": "D",
+  "timezone": "Etc/UTC",
+  "theme": "Light",
+  "style": "1",
+  "locale": "en",
+  "toolbar_bg": "#f1f3f6",
+  "enable_publishing": false,
+  "allow_symbol_change": true,
+  "hideideas": true,
+  "studies": [
+    "RSI@tv-basicstudies",
+    "MACD@tv-basicstudies"
+  ],
+  "show_popup_button": true,
+  "popup_width": "1000",
+  "popup_height": "650",
+  "container_id": "tradingview_6e229"
+}
+  );
+  </script>
+</div>
+<!-- TradingView Widget END -->
 </body>
 </html>
