--- a/cryptochart.html
+++ b/cryptochart.html
@@ -9,15 +9,14 @@
 <body>
 <!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
-  <div id="tradingview_5eca6"></div>
-  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/BINANCE-BTCUSDT/" rel="noopener" target="_blank"><span class="blue-text">BTCUSDT</span> <span class="blue-text">chart</span> by TradingView</a></div>
+  <div id="tradingview_9c271"></div>
+  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/BINANCE-BNBBTC/" rel="noopener" target="_blank"><span class="blue-text">BNBBTC</span> <span class="blue-text">chart</span> by TradingView</a></div>
   <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
   <script type="text/javascript">
   new TradingView.widget(
   {
-  "width": 980,
-  "height": 610,
-  "symbol": "BINANCE:BTCUSDT",
+  "autosize": true,
+  "symbol": "BINANCE:BNBBTC",
   "interval": "D",
   "timezone": "Etc/UTC",
   "theme": "Light",
@@ -34,7 +33,7 @@
   "show_popup_button": true,
   "popup_width": "1000",
   "popup_height": "650",
-  "container_id": "tradingview_5eca6"
+  "container_id": "tradingview_9c271"
 }
   );
   </script>
@@ -48,8 +47,7 @@
   <script type="text/javascript">
   new TradingView.widget(
   {
-  "width": 980,
-  "height": 610,
+  "autosize": true,
   "symbol": "BINANCE:BNBBTC",
   "interval": "D",
   "timezone": "Etc/UTC",
