--- a/cryptochart.html
+++ b/cryptochart.html
@@ -7,6 +7,7 @@
 
   </head>
 <body>
+  <div>
 <!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
   <div id="tradingview_9c271"></div>
@@ -71,5 +72,6 @@
   </script>
 </div>
 <!-- TradingView Widget END -->
+    </div>
 </body>
 </html>
