--- a/cryptochart.html
+++ b/cryptochart.html
@@ -7,7 +7,7 @@
 
   </head>
 <body>
-  <div>
+  <div style="height:100vh"d>
 <!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
   <div id="tradingview_9c271"></div>
