--- a/cryptochart.html
+++ b/cryptochart.html
@@ -16,7 +16,7 @@
   <script type="text/javascript">
   new TradingView.widget(
   {
-  "autosize": true,
+  "height": "360",
   "symbol": "BINANCE:BNBBTC",
   "interval": "D",
   "timezone": "Etc/UTC",
@@ -48,7 +48,7 @@
   <script type="text/javascript">
   new TradingView.widget(
   {
-  "autosize": true,
+  "height": "360",
   "symbol": "BINANCE:BNBBTC",
   "interval": "D",
   "timezone": "Etc/UTC",
