--- a/cryptochart.html
+++ b/cryptochart.html
@@ -7,16 +7,17 @@
 
   </head>
 <body>
-  <div style="height:100vh"d>
+  <div style="float:left">
 <!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
   <div id="tradingview_9c271"></div>
-  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/BINANCE-BNBBTC/" rel="noopener" target="_blank"><span class="blue-text">BNBBTC</span> <span class="blue-text">chart</span> by TradingView</a></div>
+
   <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
   <script type="text/javascript">
   new TradingView.widget(
   {
-  "height": "360",
+   "width" :"100%",
+  "height": "460",
   "symbol": "BINANCE:BNBBTC",
   "interval": "D",
   "timezone": "Etc/UTC",
@@ -43,12 +44,13 @@
   <!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
   <div id="tradingview_6e229"></div>
-  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/BINANCE-BNBBTC/" rel="noopener" target="_blank"><span class="blue-text">BNBBTC</span> <span class="blue-text">chart</span> by TradingView</a></div>
+ 
   <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
   <script type="text/javascript">
   new TradingView.widget(
   {
-  "height": "360",
+   "width" :"100%",
+  "height": "460",
   "symbol": "BINANCE:BNBBTC",
   "interval": "D",
   "timezone": "Etc/UTC",
