--- a/cryptochart.html
+++ b/cryptochart.html
@@ -7,7 +7,7 @@
 
   </head>
 <body>
-  <div style="float:left">
+  <div>
 <!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
   <div id="tradingview_9c271"></div>
@@ -40,6 +40,8 @@
   );
   </script>
 </div>
+      </div>
+    <div>
 <!-- TradingView Widget END -->
   <!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
