--- a/cryptochart.html
+++ b/cryptochart.html
@@ -6,8 +6,15 @@
     <title>Decision-trees by geper</title>
 
   </head>
-<body>
-  <div>
+<body style="
+    float: left;
+    width: 100%;
+">
+  <div style="
+    width: 50%;
+    float:  left;
+    display: inline-block;
+">
 <!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
   <div id="tradingview_9c271"></div>
@@ -41,7 +48,11 @@
   </script>
 </div>
       </div>
-    <div>
+    <div style="
+    width: 50%;
+    float:  left;
+    display: inline-block;
+">
 <!-- TradingView Widget END -->
   <!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
@@ -53,7 +64,90 @@
   {
    "width" :"100%",
   "height": "460",
-  "symbol": "BINANCE:BNBBTC",
+  "symbol": "BINANCE:BTCUSDT",
+  "interval": "D",
+  "timezone": "Etc/UTC",
+  "theme": "Light",
+  "style": "1",
+  "locale": "en",
+  "toolbar_bg": "#f1f3f6",
+  "enable_publishing": false,
+  "allow_symbol_change": true,
+  "hideideas": true,
+  "studies": [
+    "RSI@tv-basicstudies",
+    "MACD@tv-basicstudies"
+  ],
+  "show_popup_button": true,
+  "popup_width": "1000",
+  "popup_height": "650",
+}
+  );
+  </script>
+</div>
+<!-- TradingView Widget END -->
+    </div>
+  
+    </div>
+    <div style="
+    width: 50%;
+    float:  left;
+    display: inline-block;
+">
+<!-- TradingView Widget END -->
+  <!-- TradingView Widget BEGIN -->
+<div class="tradingview-widget-container">
+  <div id="tradingview_6e229"></div>
+ 
+  <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
+  <script type="text/javascript">
+  new TradingView.widget(
+  {
+   "width" :"100%",
+  "height": "460",
+  "symbol": "BINANCE:WABIBTC",
+  "interval": "D",
+  "timezone": "Etc/UTC",
+  "theme": "Light",
+  "style": "1",
+  "locale": "en",
+  "toolbar_bg": "#f1f3f6",
+  "enable_publishing": false,
+  "allow_symbol_change": true,
+  "hideideas": true,
+  "studies": [
+    "RSI@tv-basicstudies",
+    "MACD@tv-basicstudies"
+  ],
+  "show_popup_button": true,
+  "popup_width": "1000",
+  "popup_height": "650",
+}
+  );
+  </script>
+</div>
+<!-- TradingView Widget END -->
+    </div>
+      </div>
+  
+    </div>
+    <div style="
+    width: 50%;
+    float:  left;
+    display: inline-block;
+">
+<!-- TradingView Widget END -->
+  <!-- TradingView Widget BEGIN -->
+<div class="tradingview-widget-container">
+  <div id="tradingview_6e229"></div>
+ 
+  <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
+  <script type="text/javascript">
+  new TradingView.widget(
+  {
+   "width" :"100%",
+  "height": "460",
+  "symbol": "BINANCE:MTLBTC",
   "interval": "D",
   "timezone": "Etc/UTC",
   "theme": "Light",
