--- a/cryptochart.html
+++ b/cryptochart.html
@@ -87,14 +87,15 @@
 </div>
 <!-- TradingView Widget END -->
     </div>
+      </div>
   
-    </div>
+  <!-- BINANCE:WABIBTC -->
     <div style="
     width: 50%;
     float:  left;
     display: inline-block;
 ">
-<!-- TradingView Widget END -->
+
   <!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
   <div id="tradingview_6e229"></div>
@@ -129,7 +130,7 @@
 <!-- TradingView Widget END -->
     </div>
       </div>
-  
+ <!-- BINANCE:MTLBTC BEGIN--> 
     </div>
     <div style="
     width: 50%;
@@ -148,6 +149,87 @@
    "width" :"100%",
   "height": "460",
   "symbol": "BINANCE:MTLBTC",
+  "interval": "D",
+  "timezone": "Etc/UTC",
+  "theme": "Light",
+  "style": "1",
+  "locale": "en",
+  "toolbar_bg": "#f1f3f6",
+  "enable_publishing": false,
+  "allow_symbol_change": true,
+  "hideideas": true,
+  "studies": [
+    "RSI@tv-basicstudies",
+    "MACD@tv-basicstudies"
+  ],
+  "show_popup_button": true,
+  "popup_width": "1000",
+  "popup_height": "650",
+}
+  );
+  </script>
+</div>
+<!-- TradingView Widget END -->
+    </div>
+    </div>
+ <!-- BINANCE:WTCBTC--> 
+    <div style="
+    width: 50%;
+    float:  left;
+    display: inline-block;
+">
+<!-- TradingView Widget END -->
+  <!-- TradingView Widget BEGIN -->
+<div class="tradingview-widget-container">
+  <div id="tradingview_6e229"></div>
+ 
+  <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
+  <script type="text/javascript">
+  new TradingView.widget(
+  {
+   "width" :"100%",
+  "height": "460",
+  "symbol": "BINANCE:WTCBTC",
+  "interval": "D",
+  "timezone": "Etc/UTC",
+  "theme": "Light",
+  "style": "1",
+  "locale": "en",
+  "toolbar_bg": "#f1f3f6",
+  "enable_publishing": false,
+  "allow_symbol_change": true,
+  "hideideas": true,
+  "studies": [
+    "RSI@tv-basicstudies",
+    "MACD@tv-basicstudies"
+  ],
+  "show_popup_button": true,
+  "popup_width": "1000",
+  "popup_height": "650",
+}
+  );
+  </script>
+</div>
+<!-- TradingView Widget END -->
+    </div>
+ <!-- BINANCE:TRXBTC--> 
+   <div style="
+    width: 50%;
+    float:  left;
+    display: inline-block;
+">
+<!-- TradingView Widget END -->
+  <!-- TradingView Widget BEGIN -->
+<div class="tradingview-widget-container">
+  <div id="tradingview_6e229"></div>
+ 
+  <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
+  <script type="text/javascript">
+  new TradingView.widget(
+  {
+   "width" :"100%",
+  "height": "460",
+  "symbol": "BINANCE:TRXBTC",
   "interval": "D",
   "timezone": "Etc/UTC",
   "theme": "Light",
