--- a/red.html
+++ b/red.html
@@ -1,7 +1,7 @@
 <html>
 <meta content="photo" name="twitter:card">
-<meta content="@flickr" name="twitter:site">
+<meta content="cards.twitter.com" name="twitter:site">
 <meta content="Mountain sunset" name="twitter:title">
-<meta content="http://farm8.staticflickr.com/7334/11858349453_e3f18e5881_z.jpg" name="twitter:image">
-<meta content="https://www.flickr.com/photos/reza-sina/11858349453/" name="twitter:url">	
+<meta content="https://million-wallpapers.ru/wallpapers/5/73/438996206404508.jpg" name="twitter:image">
+
 </html>
