--- a/red.html
+++ b/red.html
@@ -4,7 +4,7 @@
 <meta content="Mountain sunset" name="twitter:title">
 <meta content="https://million-wallpapers.ru/wallpapers/5/73/438996206404508.jpg" name="twitter:image">
 <meta content="http://yandex.ru/clck/jsredir?bu=bqno&from=yandex.ru%3Bsearch%2F%3Bweb%3B%3B&text=&etext=1916.kSUdSnQBbyFdjKCYyG2fImhHIdoGy6YC-hqAh8QZyfJO-odtdu4uphD-poJF1GgA.5eeec87c3f452050f469aa9fd3b7dc574a27c9b8&uuid=&state=PEtFfuTeVD5kpHnK9lio9WCnKp0DidhE-SLNwr0JJo2M3r0Y1HjBz_qTnEm0GgTcCq-7P6G67wkU6RzVlHEY4g,,&&cst=AiuY0DBWFJ5Hyx_fyvalFAE-_JNoxVAI1IIf3xEhwtzi1mp8bGTY0KTmqYzCVrtbbJn1dyztSsykBlELXEDh6yhumutfICt23cYG4kQ0LhZT66ZJvzgVYlzMsmJhhueUDeFjqR1nKFiAufGmQy7w18u4RR-jxGH0beK6qj0fUj6TQ8TNWf-vYl7dP5sQpu74n1QP0L4ANAF7JWxIdsmE4mAqHC9qSwiiWdD1P-QUDu4DBHWCW6PVFd0cAwZF6ZJhhKHvBzIhQZXcDJUy3Fu_91KGehXC33kLkzuuEFCzH9jHCmJ6quC1Z9Fbky-_96KgTsmgI-MVtm7rPlS7bh4U7-faXlM-rTpMb1EuYIAPu8hgFDFR_UlYjZOJGiyybQQTpcjr3snNYKvjOxDHTBj_Vs4rHJM_P7ch1pK2b7Yy-mwgEuVukq06V01kT6R1Jl2G6nGZtiFH6QKvf53uob1ywyFDiudKIpLl2HT0snrqRkaxxmWruhONjOT7vGrp8cE0MU9X1yV0p9iEZBMm5CvcAmUYuZ56ZGAT8sn9syUJ1KMmxp_iur5wUGh4JSQqxZU8F-a15ez29aUVgmffkY9V8DvIsLX3n1w6SSQ9tPYuokEG54VOAXnhCAfmgcC-ZfgYnYK0wZvJ4gPhJnF89qRz3W7WFcxtuLhE7Qqg3Ss2pai8tM-S1x-sX1qr4wZoQ-qBU1YLr1TzDuiMoYLlhUmT1vG0hLXoa0wxv_zx_E_baFE,&data=UlNrNmk5WktYejR0eWJFYk1LdmtxbjRzUXdDWlo0azZUYXVRYm15UWFacTBEUWNvRzc2eVROWTk2alcxQkNQWjB6NVNmcnVlcnN1Z3Zuek9uMDdaazkwSWt3aHF0eUlQQ1JuZXkxaTJJc0ks&sign=85d0ac87b005cd65ff5fe4dbf1661d34&keyno=0&b64e=2&ref=orjY4mGPRjk5boDnW0uvlrrd71vZw9kpfmwSlf_6ZUZ4gLehWs6G6uQW59GPkIvWuQ06_qDrcEfBmOt36txwUIFtWf_hJrai73gfXOyUHuVtn4-LmZFsbnHU7cfVW2hguLiuY5_MIaA,&l10n=ru&rp=1&cts=1537433148149&mc=4.6548478421101604&hdtime=175275" property="og:url">
-!-->
+
   <meta content="player" name="twitter:card">
 <meta content="@youtube" name="twitter:site">
 <meta content="http://www.baidu.com/baidu.php?url=060000jZYuibWkd0MEcE8p-Bk2VSd-39bzbXllI8w_x2fuaI31TbHDiTVRqsAzn0ccelGQir_X2-VuMb20Ho-F4M97lB1PALs38Hjrd2VZZ-Tes87RcxcnPTVqTVbTuPrjLJ-g1fR23vvb_rP-qRNd8ZehfmgcGH5w8nesfLfVdki3OMMf.7R_iHF8xnhA94wEYL_SNK-deQbfHgI3ynDgg6msw5I7AMHdey5A7MXh1uvyUqMWujjIdk_pI5QblXMWbe2qOQggg3vX5u84ILHgbvyTILyqWO_xtjeOtgO0l5OKsX1O6Nx2r1KOoOROBXxyPWoomJCRnXZWeTrHl3TMdWtCpQ3XLzCn8EuTWjbSVjjkSJT5Z4pTrHIkSyHjbLurh5jbLTx-uSxqE6ORs4PvHdsXrVtT54L3OOKsxM3ROhSZAhUOB8ObFOvECxWOdGs4PvHleno5VOx9xSEiM_B3xZeOMSgZKS5qZZOkrJYTxOKst5HslEEgoObxo3SrZF8zXEUvIrWwt5O0ORsgNOCxtgzOfLL5Lxk5SKsFs4PvHlOqWO_X1_8dwXVMSdwSgex3S54S19lxdQPxYxty5ge5UbOUdOk5lQq7ZdSElOqMtx3-jFSUOpOdl_rHIbSEouse5uwhSWjbLu5gQ_SglqxO0O3CVL_qEsOWOs53MO7vr3x1wOegW3O-zp3X9MVOCOVLSLkzIhE1OyM_dSLt_x3O2EgYOMO5ROvI8HvXx_qXvlE3TrHIbqgN4rzVMOpBtO5jbLu5yQSwWSZOuOdeECOd4Th5Kj9zU_MdHwOUdSXZF8zXEeqhJO3U5OKPe5-g_JOU3xr5O6xMs4PLZ4mTheWt-2s1f_uQ2SMmC.U1Yk0ZDquv60TA-W5HD0IjdMpaRznjf0pyYqnW0Y0ATqmhNsT100Iybqmh7GuZR0TA-b5HnL0APGujYs0AdY5HDsnHPxnH0kPdtknjD40AVG5H00TMfqrHT0uy-b5HcLnW0kg1DYPHwxnWR3nHKxnWDknWn0mhbqnW0Yg1DdPfKVm1Y1PHcsPHfzrjFxP16vPj0YPjTkg1DsnjD0TgKGujYs0Z7Wpyfqn0KzuLw9u1Ys0A7B5HKxn0K-ThTqn0KsTjYs0A4vTjYsQW0snj0snj0s0AdYTjYs0AwbUL0qn0KzpWYs0Aw-IWdsmsKhIjYs0ZKC5H00ULnqn0KBI1YL0A4Y5H00TLCq0ZwdT1Y3njndrjb4njR4rHnYPjbYn1630ZF-TgfqnHR1P1f1n1b4n1cYn6K1pyfqmH0Ln10duW0snj0kPWRYP6KWTvYqfbnknHf3P1KKnbfYrDDLw6K9m1Yk0ZK85H00TydY5H00Tyd15H00XMfqn0KVmdqhThqV5HKxn7ts0Aw9UMNBuNqsUA78pyw15HKxn7ts0ZK9I7qhUA7M5H00uAPGujYs0ANYpyfqQHD0mgPsmvnqn0KdTA-8mvnqn0KkUymqnHm0uhPdIjYs0AulpjYs0Au9IjYs0ZGsUZN15H00mywhUA7M5HD0UAuW5H00mLFW5HcvnjfY&ck=8470.4.138.253.146.232.140.482&shh=www.baidu.com&sht=baidu&us=1.0.1.0.1.300.0&ie=utf-8&f=8&tn=baidu&wd=gh&rqlang=cn&inputT=484" name="twitter:url">
@@ -13,7 +13,12 @@
 <meta content="http://i.ytimg.com/vi/9Db6JZHh0SA/maxresdefault.jpg" name="twitter:image">
 
 <meta content="photo" name="twitter:card">
-
+!-->
+<meta content="photo" name="twitter:card">
+<meta content="@flickr" name="twitter:site">
+<meta content="Mountain sunset" name="twitter:title">
+<meta content="http://farm8.staticflickr.com/7334/11858349453_e3f18e5881_z.jpg" name="twitter:image">
+<meta content="https://www.flickr.com/photos/reza-sina/11858349453/" name="twitter:url">	
 
 
 </html>
