--- a/red.html
+++ b/red.html
@@ -13,12 +13,19 @@
 <meta content="http://i.ytimg.com/vi/9Db6JZHh0SA/maxresdefault.jpg" name="twitter:image">
 
 <meta content="photo" name="twitter:card">
-!-->
+
 <meta content="photo" name="twitter:card">
 <meta content="@flickr" name="twitter:site">
 <meta content="Mountain sunset" name="twitter:title">
 <meta content="http://farm8.staticflickr.com/7334/11858349453_e3f18e5881_z.jpg" name="twitter:image">
 <meta content="https://www.flickr.com/photos/reza-sina/11858349453/" name="twitter:url">	
-
-
+!-->
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:site" content="@nytimesbits" />
+<meta name="twitter:creator" content="@nickbilton" />
+<meta property="og:url" content="http://bits.blogs.nytimes.com/2011/12/08/a-twitter-for-my-sister/" />
+<meta property="og:title" content="A Twitter for My Sister" />
+<meta property="og:description" content="In the early days, Twitter grew so quickly that it was almost impossible to add new features because engineers spent their time trying to keep the rocket ship from stalling." />
+<meta property="og:image" content="http://graphics8.nytimes.com/images/2011/12/08/technology/bits-newtwitter/bits-newtwitter-tmagArticle.jpg" />
+  
 </html>
