--- a/red.html
+++ b/red.html
@@ -19,13 +19,20 @@
 <meta content="Mountain sunset" name="twitter:title">
 <meta content="http://farm8.staticflickr.com/7334/11858349453_e3f18e5881_z.jpg" name="twitter:image">
 <meta content="https://www.flickr.com/photos/reza-sina/11858349453/" name="twitter:url">	
-!-->
+
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:site" content="@nytimesbits" />
 <meta name="twitter:creator" content="@nickbilton" />
-<meta property="og:url" content="http://bits.blogs.nytimes.com/2011/12/08/a-twitter-for-my-sister/" />
+<meta property="og:url" content="http://yandex.ru/clck/jsredir?bu=1pu1&from=yandex.ru%3Bsearch%2F%3Bweb%3B%3B&text=&etext=1916.k60Sqvcn9ZZy2j27JDRANUJ6pFs8sN-Q4pfZnCxYkJOYrOk0yb-HHDCbnSwgM7ZQ.e026a9542230bab472129c3450ab46d10ee4f358&uuid=&state=PEtFfuTeVD5kpHnK9lio9dFa2ePbDzX7fH_cbK-eu2V8J4cbFpzDXW9rYi7SZhqEJIq8fXhATr5ZDzTC0wt8G5NugjsS9BAsBeCvIwn5QlQ,&&cst=AiuY0DBWFJ5Hyx_fyvalFAE-_JNoxVAI1IIf3xEhwtzi1mp8bGTY0KTmqYzCVrtbbJn1dyztSsykBlELXEDh6yhumutfICt23cYG4kQ0LhZT66ZJvzgVYlzMsmJhhueUDeFjqR1nKFiAufGmQy7w18u4RR-jxGH0beK6qj0fUj6TQ8TNWf-vYl7dP5sQpu74kG4eLXUmjGDt-FOLXEXnhzVArdcitOxcSI-WayhZzYnJE_2M-z6orBdBDaAYfQI-HnJyUnZyoQgo4Ta9Be-32LwCFp6g2p911P8DevNK1Bx1ISYJ41cm7zT7YskxAQ9wWUTJlym0_DnX-uWLW1Rn4YZ_U8mJIm_enqhiYtS0ecCZYbAvlOZiQ7GOecRTatTfG41m7Xjayh_CJDvOhJeakQMae61wob4Ja9igI_IM0qObjbBQPrvTmz_E1-tL16ph5tgRuColNjhxLWLDUAgK-d-9oS3jypGCD1-v0Ofsvq1JPbnmnOQUhqeXKAluzzrTK_BFbPfu40pPZGW9k_ysB0F0JyauY6wDEBmGhv-bc037Jlsaj-FbKn2hn01jSX45QOA7ggfbPdYV5Pw3gNDqkLcTnSamtzSGAoiALXUOIAerX521zm3jpCStsuT9w68EurpwyVZZAH_yk2DBe8HqJJKXwN--zD0TE1WtyiweUXwG4UVE0xLMEv0YrawxVy1NMBsRVYHQN9u2yuVzNg6YivrpIYTCUgAh&data=UlNrNmk5WktYejY4cHFySjRXSWhXS0UzNFdfZWRJWVhCMWdDbkFZaTR6R3dSVE5yWG1DLVBsNnNSbkdjLU85Qjk5RUxQaTNzcGpmOFB1bmdiQVJEMEpzOVl5RHR5NVNVY0JOcGZWV2FwLXcwRlJtSGVDR2hmTFVkT2FUMUYyTXVqcTc4YTZjOHMxVE5uQkdET0lCOWJCUXdRMHlfTUZGWl8tUzVnQXVIaVpicFF6cTV5X2F5ZDdJWDFZUWtyeDVH&sign=00315fed5f0816ef32aeead0b031f26b&keyno=0&b64e=2&ref=orjY4mGPRjk5boDnW0uvlrrd71vZw9kpfmwSlf_6ZUZ4gLehWs6G6slZ0y49dwyIfztkGVYtb2RwoDpR9_vTdL2MM_sF7WUtg327yIdJ5-0,&l10n=ru&rp=1&cts=1537435231990&mc=5.1403115322251&hdtime=756406" />
 <meta property="og:title" content="A Twitter for My Sister" />
 <meta property="og:description" content="In the early days, Twitter grew so quickly that it was almost impossible to add new features because engineers spent their time trying to keep the rocket ship from stalling." />
 <meta property="og:image" content="http://graphics8.nytimes.com/images/2011/12/08/technology/bits-newtwitter/bits-newtwitter-tmagArticle.jpg" />
+  !-->
+  <meta name="twitter:card" content="gallery">
+	<meta name="twitter:creator" content="@webholt">
+	<meta name="twitter:title" content="Всем котиков!">
+	<meta name="twitter:image0" content="http://gwer.github.io/twi-cards/img/cat2.jpg">
+
+  
   
 </html>
