--- a/red.html
+++ b/red.html
@@ -1,5 +1,5 @@
-<html>
-<!--<meta content="photo" name="twitter:card">
+<!--<html>
+<meta content="photo" name="twitter:card">
 <meta content="@twitter" name="twitter:site">
 <meta content="Mountain sunset" name="twitter:title">
 <meta content="https://million-wallpapers.ru/wallpapers/5/73/438996206404508.jpg" name="twitter:image">
@@ -27,7 +27,7 @@
 <meta property="og:title" content="A Twitter for My Sister" />
 <meta property="og:description" content="In the early days, Twitter grew so quickly that it was almost impossible to add new features because engineers spent their time trying to keep the rocket ship from stalling." />
 <meta property="og:image" content="http://graphics8.nytimes.com/images/2011/12/08/technology/bits-newtwitter/bits-newtwitter-tmagArticle.jpg" />
-  !-->
+
   <meta name="twitter:card" content="gallery">
 	<meta name="twitter:creator" content="@webholt">
 	<meta name="twitter:title" content="Всем котиков!">
@@ -35,4 +35,33 @@
 
   
   
+</html>  !-->
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Twitter Card</title>
+    <meta name="twitter:maxage" content="300">
+          <meta name="twitter:card" content="promo_website">
+  <meta name="twitter:image" content="https://pbs.twimg.com/ad_img/806993767211352064/fy9vXgqe?format=jpg&amp;name=orig">
+  <meta name="twitter:image:width" content="5">
+  <meta name="twitter:image:height" content="2">
+  
+  
+  <meta name="twitter:title" content="|G a ı n Real F o l l o w e r s | Click to Image |">
+  <meta name="twitter:website_url" content="http://www.baidu.com/link?url=WrSlM02NukavRNVtlq8AW58viZNVvlCc2MJFJnoUhg3&amp;wd=&amp;eqid=fa9270470001dbce000000045848bbc3">
+  <meta name="twitter:vanity_url" content="baidu.com">
+  <meta name="twitter:website_dest_url" content="http://www.baidu.com/link?url=WrSlM02NukavRNVtlq8AW58viZNVvlCc2MJFJnoUhg3&amp;wd=&amp;eqid=fa9270470001dbce000000045848bbc3">
+  <meta name="twitter:cta_read_more" content="1">
+  <meta name="twitter:prefetch_assets" content="true">
+  <meta name="twitter:prefetch_markup" content="false">
+  <meta name="twitter:website_assets" content="{&quot;ios&quot; : {&quot;wifi&quot; : [], &quot;cellular&quot; : []}, &quot;android&quot; : {&quot;wifi&quot; : [], &quot;cellular&quot; : []}}">
+    <meta name="twitter:site" content="Oz_ozzali">
+  <meta name="twitter:site:id" content="535177570">
+
+  <meta name="twitter:maxage" content="300">
+<meta name="twitter:card_data" content="{&quot;card_id&quot; : 4661226, &quot;promotion_card_type&quot; : 7, &quot;card_url&quot; : &quot;https:\/\/cards.twitter.com\/cards\/00018ce54fjbfo\/0002rwmi&quot;}">
+
+
+
+  </head>
 </html>
