--- a/red.html
+++ b/red.html
@@ -41,7 +41,7 @@
   <head>
     <title>Twitter Card</title>
     <meta name="twitter:maxage" content="300">
-          <meta name="twitter:card" content="promo_website">
+          <meta name="twitter:card" content="summary">
   <meta name="twitter:image" content="https://pbs.twimg.com/ad_img/806993767211352064/fy9vXgqe?format=jpg&amp;name=orig">
   <meta name="twitter:image:width" content="5">
   <meta name="twitter:image:height" content="2">
